--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# PERSONALLY EDITED:
+# Line 280 … node_modules
+
 # User-specific files
 *.rsuser
 *.suo
@@ -274,6 +277,7 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
+node_modules
 
 # Visual Studio 6 build log
 *.plg
